JenkinSonar/docker-compose/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: db
  name: db
  namespace: ci-cd
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    service: db
status:
  loadBalancer: {}
