JenkinSonar/docker-compose/templates/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: sonarqube
  name: sonarqube
  namespace: ci-cd
spec:
  ports:
  - name: "9001"
    port: 9001
    targetPort: 9000
  selector:
    service: sonarqube
status:
  loadBalancer: {}
